Update CORS to allow Vercel frontend and add Vercel config