@@ -15,8 +15,10 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.beans.factory.annotation.Value;
 
 import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 @Configuration
@@ -26,6 +28,9 @@ public class SecurityConfig {
 
     @Autowired
     private JwtAuthenticationFilter jwtAuthenticationFilter;
+
+    @Value("${ALLOWED_ORIGINS:}")
+    private String allowedOriginsEnv;
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -63,12 +68,40 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of(
+        
+        // Build allowed origins list
+        List<String> allowedOrigins = new ArrayList<>(Arrays.asList(
             "http://localhost:5173", 
             "http://localhost:3000",
             "http://127.0.0.1:5173",
             "http://127.0.0.1:3000"
         ));
+        
+        // Add origins from environment variable (comma-separated)
+        if (allowedOriginsEnv != null && !allowedOriginsEnv.isEmpty()) {
+            String[] origins = allowedOriginsEnv.split(",");
+            for (String origin : origins) {
+                String trimmed = origin.trim();
+                if (!trimmed.isEmpty() && !allowedOrigins.contains(trimmed)) {
+                    allowedOrigins.add(trimmed);
+                }
+            }
+        }
+        
+        // In production (Railway), allow all origins by default to work with Vercel
+        // You can restrict this by setting ALLOWED_ORIGINS in Railway
+        String port = System.getenv("PORT");
+        boolean isProduction = port != null && !port.isEmpty();
+        
+        if (isProduction) {
+            // Allow all origins in production (Railway) to work with any Vercel domain
+            // You can restrict by setting ALLOWED_ORIGINS env var in Railway
+            configuration.setAllowedOriginPatterns(Arrays.asList("*"));
+        } else {
+            // In development, only allow localhost
+            configuration.setAllowedOrigins(allowedOrigins);
+        }
+        
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setExposedHeaders(Arrays.asList("Authorization"));
